--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <option value="3">Hard</option>
                 </select>
                 <button id="buttonPlay">
-                    Gioca
+                   <span class="click_game">Gioca</span> 
                 </button>
 
             </div>
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-        made with <span> &hearts; </span> by Stefano Mancuso
+        made with <span class="cuore"> &hearts; </span> <span>by Stefano Mancuso</span>
     </footer>
 
     <script src="js/app.js"></script>
